# Sorting-Algorithms

./: CMakeLists.txt  README.md
service/: fileLoader.cpp  fileLoader.h  main.cpp  main.h
service/arrayGenerator/: arrayGenerator.cpp  arrayGenerator.h
service/correctionTest/: correctionTest.cpp  correctionTest.h
service/fileHandler/: plik.cpp  plik.h
service/quickSortDescending/: quickSortDescending.cpp  quickSortDescending.h
sorters/heapSort/: heapSort.cpp  heapSort.h  heapSortCall.cpp  heapSortCall.h
sorters/insertionSort/: insertionSort.cpp  insertionSort.h  insertionSortCall.cpp  insertionSortCall.h
sorters/quickSort/: quickSort.cpp  quickSort.h  quickSortCall.cpp  quickSortCall.h
sorters/shellSort/: shellSort.cpp  shellSort.h  shellSortCall.cpp  shellSortCall.h
